--- a/css/variants/aubergine-monospaced.css
+++ b/css/variants/aubergine-monospaced.css
@@ -70,10 +70,14 @@
   #monkey_scroll_wrapper_for_channels_scroller .monkey_scroll_bar { background: #4a3b49; }
   #monkey_scroll_wrapper_for_channels_scroller .monkey_scroll_handle_inner { background: #61485e; border: 3px solid #876484; }
   .loading #loading-zone { background: #3e313c; left: 110px; }
-  .loading #col_channels_bg { background: #3e313c; }
   #self_help_link_div { right: 110px !important; }
-  #loading_indicator, #loading_welcome_msg { color: #a3839f; text-shadow: 0 1px #372c36; }
-  #loading_team_menu_bg, #loading_user_menu_bg { border: none; }
+  #loading_welcome { background-image: none; }
+  #loading_message p { color: #f0d9ed; }
+  #loading_message #loading_message_attribution { color: #a3839f; }
+  #col_channels_bg { background: #3e313c; }
+  #loading_team_menu_bg, #loading_user_menu_bg { background: #3e313c; border: none; }
+  #loading_message_spinner { background-image: none; }
+  #loading_message_spinner::after { color: #a3839f; content: "Loading..."; display: block; width: auto; }
   input[type=text], input[type=password], input[type=datetime], input[type=datetime-local], input[type=date], input[type=month], input[type=time], input[type=week], input[type=number], input[type=email], input[type=url], input[type=tel], input[type=color], input[type=search] { background-color: #61485e; border: 1px solid #372c36; color: #f0d9ed; }
   input[type=text]:focus, input[type=password]:focus, input[type=datetime]:focus, input[type=datetime-local]:focus, input[type=date]:focus, input[type=month]:focus, input[type=time]:focus, input[type=week]:focus, input[type=number]:focus, input[type=email]:focus, input[type=url]:focus, input[type=tel]:focus, input[type=color]:focus, input[type=search]:focus { border-color: rgba(77, 57, 75, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(135, 100, 132, 0.6); }
   input[type=file]:focus { outline: #f0d9ed dotted thin; }
@@ -364,7 +368,8 @@
   #active_channel_name .ts_icon_microphone:hover, #active_channel_name .ts_icon_video_camera:hover { color: #f0d9ed; }
   #active_channel_name:hover .name.muted, #active_channel_name:hover i .fa { color: #f0d9ed; }
   #group_actions, #im_actions { color: #a3839f; }
-  #rxn_toast_div { background: #876484; border: 1px solid rgba(0, 0, 0, 0.15); }
+  #rxn_toast_div { background: #372c36; border: 1px solid #61485e; }
+  #rxn_toast_div.header_refresh { background: #372c36; border: 1px solid #61485e; }
   #whats_new_burst { background: #bf360c; border-color: #61485e; }
   #client_header .search_form .icon_search { color: #a3839f; }
   #client_header .search_form .icon_close { color: #a3839f; }
@@ -469,6 +474,8 @@
   .dm_badge a.member_preview_link { color: #a3839f; }
   .dm_badge .dm_badge:hover a { color: #a3839f; }
   .dm_badge .hint { color: #a3839f; }
+  .is_limited_div { background-color: #3e313c !important; }
+  .is_limited_div.mini { color: #a3839f !important; }
   .light_theme ts-message { color: #f0d9ed; font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
   .light_theme ts-message.unprocessed { color: rgba(240, 217, 237, 0.75); }
   .light_theme ts-message .msg_right_link { color: #a3839f; }
