--- a/css/variants/midnight-blue.css
+++ b/css/variants/midnight-blue.css
@@ -70,10 +70,14 @@
   #monkey_scroll_wrapper_for_channels_scroller .monkey_scroll_bar { background: #222; }
   #monkey_scroll_wrapper_for_channels_scroller .monkey_scroll_handle_inner { background: #333; border: 3px solid #444; }
   .loading #loading-zone { background: #000; left: 110px; }
-  .loading #col_channels_bg { background: #000; }
   #self_help_link_div { right: 110px !important; }
-  #loading_indicator, #loading_welcome_msg { color: #1793d1; text-shadow: 0 1px #000; }
-  #loading_team_menu_bg, #loading_user_menu_bg { border: none; }
+  #loading_welcome { background-image: none; }
+  #loading_message p { color: #00b9f2; }
+  #loading_message #loading_message_attribution { color: #1793d1; }
+  #col_channels_bg { background: #000; }
+  #loading_team_menu_bg, #loading_user_menu_bg { background: #000; border: none; }
+  #loading_message_spinner { background-image: none; }
+  #loading_message_spinner::after { color: #1793d1; content: "Loading..."; display: block; width: auto; }
   input[type=text], input[type=password], input[type=datetime], input[type=datetime-local], input[type=date], input[type=month], input[type=time], input[type=week], input[type=number], input[type=email], input[type=url], input[type=tel], input[type=color], input[type=search] { background-color: #333; border: 1px solid #000; color: #00b9f2; }
   input[type=text]:focus, input[type=password]:focus, input[type=datetime]:focus, input[type=datetime-local]:focus, input[type=date]:focus, input[type=month]:focus, input[type=time]:focus, input[type=week]:focus, input[type=number]:focus, input[type=email]:focus, input[type=url]:focus, input[type=tel]:focus, input[type=color]:focus, input[type=search]:focus { border-color: rgba(17, 17, 17, 0.8); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(68, 68, 68, 0.6); }
   input[type=file]:focus { outline: #00b9f2 dotted thin; }
@@ -364,7 +368,8 @@
   #active_channel_name .ts_icon_microphone:hover, #active_channel_name .ts_icon_video_camera:hover { color: #00b9f2; }
   #active_channel_name:hover .name.muted, #active_channel_name:hover i .fa { color: #00b9f2; }
   #group_actions, #im_actions { color: #1793d1; }
-  #rxn_toast_div { background: #444; border: 1px solid rgba(0, 0, 0, 0.15); }
+  #rxn_toast_div { background: #000; border: 1px solid #333; }
+  #rxn_toast_div.header_refresh { background: #000; border: 1px solid #333; }
   #whats_new_burst { background: #bf360c; border-color: #333; }
   #client_header .search_form .icon_search { color: #1793d1; }
   #client_header .search_form .icon_close { color: #1793d1; }
@@ -469,6 +474,8 @@
   .dm_badge a.member_preview_link { color: #1793d1; }
   .dm_badge .dm_badge:hover a { color: #1793d1; }
   .dm_badge .hint { color: #1793d1; }
+  .is_limited_div { background-color: #000 !important; }
+  .is_limited_div.mini { color: #1793d1 !important; }
   .light_theme ts-message { color: #00b9f2; }
   .light_theme ts-message.unprocessed { color: rgba(0, 185, 242, 0.75); }
   .light_theme ts-message .msg_right_link { color: #1793d1; }
