Lighten notification bar links (fixes #46)

--- a/scss/modules/messaging/_banners.scss
+++ b/scss/modules/messaging/_banners.scss
@@ -3,10 +3,10 @@
   text-shadow: 0 1px $color-shadow-light;
 
   a {
-    color: $base-link-color;
+    color: $base-font-color;
 
     &:hover {
-      color: $base-link-color-active;
+      color: $base-font-color;
     }
   }
 }
