Fix color for current user's name (fixes #50)

--- a/scss/modules/menu/_team.scss
+++ b/scss/modules/menu/_team.scss
@@ -28,6 +28,10 @@
   }
 }
 
+#team_header_user_name {
+  color: $color-highlight;
+}
+
 #menu.team_menu {
   box-shadow: 0 3px 8px $color-shadow-medium;
 
