Brighten search input background (see #47)

--- a/scss/modules/header/_search.scss
+++ b/scss/modules/header/_search.scss
@@ -9,7 +9,7 @@
     }
 
     .search_input {
-      background: $color-shade-darkest !important;
+      background: $color-shade-dark !important;
       border: 1px solid $color-shade-light;
 
       &:hover {
