--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -45,6 +45,8 @@
 
         &:hover {
           background: $color-base;
+          border-bottom-right-radius: 0.25rem;
+          border-top-right-radius: 0.25rem;
         }
       }
 
