Fix styles for readonly and disabled inputs

--- a/scss/modules/inputs/_base.scss
+++ b/scss/modules/inputs/_base.scss
@@ -120,7 +120,7 @@ input,
 textarea {
   &[disabled],
   &[readonly] {
-    background-color: $color-shade-light;
+    background-color: $color-shade-light !important;
   }
 }
 
